fix JAVA11 reflection exception